# LinkedInThreeColorability

./: README
cpp/: README  conv.sh  exec.sh  makefile  node.cpp  node.h  threeclique.cpp  threeclique.h  threecolor  threecolor.cpp  threecolor_CLIQUE_300_3.3color_out  threecolor_MYC_180_3_20.3color_out  threecolor_MYC_300_3_80.3color_out  threecolor_RAND_180_3_20.3color_out  threecolor_RAND_300_3_80.3color_out  threecolor_steve  timer.sh
cpp/data/: 3cnfsat.pl  convert.scala
cpp/steve/: threecolor  threecolor_short_force.txt_out
cpp/tests/: .SampleNonThreeColorable2.3color.swp  ._Sample3Colorable.3color  ._SampleNon3Colorable.3color  ._SampleNonThreeColorable2.3color  ._SampleNonThreeColorable3.3color  ._SampleThreeColorable2.3color  ._SampleThreeColorable3.3color  3CNFSAT_small.txt  README  Sample3Colorable.3color  SampleNon3Colorable.3color  SampleNonThreeColorable2.3color  SampleNonThreeColorable3.3color  SampleThreeColorable2.3color  SampleThreeColorable3.3color  sample.txt  sample5.txt  sampleBand.txt  samplePentagram.txt  sampleTriPod.txt
haskell/3color/: 3color  3color.cabal  Base.hs  CSP.hs  CSPSearch.hs  Debug.hs  FastSolver.hs  INSTALL  LICENSE  Main.hs  Parse.hs  Solver.hs  Util.hs
haskell/output/: 3color_CLIQUE_300_3.3color_out  3color_CLIQUE_50_3.3color_out  3color_MYC_180_3_20.3color_out  (+7 more)
samples/: CLIQUE_300_3.3color  CLIQUE_300_4.3color  MYC_100_4_80.3color  MYC_180_3_20.3color  MYC_300_3_80.3color  MYC_60_4_20.3color  RAND_100_4_80.3color  RAND_180_3_20.3color  RAND_300_3_80.3color  RAND_90_4_20.3color  chvatal.3color  grotzsch.3color
(+102 files in other folders)
